# timeline

./: .gitignore  CLAUDE.md  README.md
backend/: .gitignore  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
backend/timeline-api/: build.gradle.kts
backend/timeline-core/: build.gradle.kts
backend/timeline-infra/: build.gradle.kts
crawler/: .gitignore  pyproject.toml
crawler/data/: joseon_events.json
crawler/src/crawler/: cli.py
crawler/src/crawler/core/: api_client.py  http_client.py  models.py  tag_analyzer.py
crawler/src/crawler/spiders/wikipedia/: categories.py  mediawiki.py  sparql.py  spider.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json  robots.txt  sitemap.xml
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: categoryApi.ts  countryApi.ts  timelineApi.ts
frontend/src/components/: CanvasZoomButtons.tsx  CategoryFilter.tsx  CountryFilter.tsx  EventDetailPanel.tsx  SearchBar.tsx  TimelineCanvas.tsx  ViewModeToggle.tsx  YearJumper.tsx  ZoomControls.tsx
frontend/src/engine/: TimelineEngine.ts  index.ts
frontend/src/engine/data/: NodeTransformer.ts  SpatialIndex.ts
frontend/src/engine/interaction/: PanZoomHandler.ts
frontend/src/engine/layers/: MinimapLayer.ts  (+5 more)
frontend/src/hooks/: useAriaLiveRegion.ts  useKeyboardNavigation.ts  useTimelineEngine.ts  useViewportEvents.ts
frontend/src/samples/: ThreeTimeline.tsx
frontend/src/store/: useTimelineStore.ts
frontend/src/types/: render.ts  timeline.ts  viewport.ts
frontend/src/utils/: countryFlags.ts
(+45 files in other folders)
